log/err/time_run65_100Gev_0_1_-1.0_sqrt__baseline_baseline.txt
usage: GBDT.py [-h] [-od OUTDIR] [-o OUTFILE] [-r RUNS [RUNS ...]]
               [-v VARIABLES [VARIABLES ...]] [-t THREADS] [-nt NTREES]
               [-nl MAXLEAVES] [-ms MAXSAMPLES] [-b BOOTSTRAP]
               [-mf MAXFEATURES]
GBDT.py: error: argument -ms/--maxSamples: invalid float value: 'sqrt'
Error in <TTree::ReadFile>: Cannot open file: ./output_train_run65_100GeV_0_1_-1.0_sqrt__baseline_baseline.dat
Warning in <Fit>: Fit data is empty 

 *** Break *** segmentation violation



===========================================================
There was a crash.
This is the entire stack trace of all threads:
===========================================================
#0  0x00002b888ad4d60c in waitpid () from /lib64/libc.so.6
#1  0x00002b888accaf62 in do_system () from /lib64/libc.so.6
#2  0x00002b888a2e7eec in TUnixSystem::StackTrace() () from /cvmfs/sft.cern.ch/lcg/releases/ROOT/6.26.00-165a8/x86_64-centos7-gcc11-opt/bin/../lib/libCore.so
#3  0x00002b888a2e55e5 in TUnixSystem::DispatchSignals(ESignals) () from /cvmfs/sft.cern.ch/lcg/releases/ROOT/6.26.00-165a8/x86_64-centos7-gcc11-opt/bin/../lib/libCore.so
#4  <signal handler called>
#5  0x00002b8889f0c2b5 in ?? ()
#6  0x00002b8889e30000 in ?? ()
#7  0x00002b888a1e67f0 in ?? () from /cvmfs/sft.cern.ch/lcg/releases/ROOT/6.26.00-165a8/x86_64-centos7-gcc11-opt/bin/../lib/libCore.so
#8  0x00002b8889e32778 in ?? () from /cvmfs/sft.cern.ch/lcg/releases/gcc/11.2.0-8a51a/x86_64-centos7/lib64/libgcc_s.so.1
#9  0x0000000000000000 in ?? ()
===========================================================


The lines below might hint at the cause of the crash.
You may get help by asking at the ROOT forum https://root.cern/forum
Only if you are really convinced it is a bug in ROOT then please submit a
report at https://root.cern/bugs Please post the ENTIRE stack trace
from above as an attachment in addition to anything else
that might help us fixing this issue.
===========================================================
#5  0x00002b8889f0c2b5 in ?? ()
#6  0x00002b8889e30000 in ?? ()
#7  0x00002b888a1e67f0 in ?? () from /cvmfs/sft.cern.ch/lcg/releases/ROOT/6.26.00-165a8/x86_64-centos7-gcc11-opt/bin/../lib/libCore.so
#8  0x00002b8889e32778 in ?? () from /cvmfs/sft.cern.ch/lcg/releases/gcc/11.2.0-8a51a/x86_64-centos7/lib64/libgcc_s.so.1
#9  0x0000000000000000 in ?? ()
===========================================================


cat: resolution.txt: File o directory non esistente
Error in <TTree::ReadFile>: Cannot open file: output_evalMoreVar_run65_100GeV_0_1_-1.0_sqrt__baseline_baseline.dat
input_line_75:2:28: error: use of undeclared identifier 't'
auto lambda0 = [](){return t-tt
                           ^
input_line_75:2:30: error: use of undeclared identifier 'tt'
auto lambda0 = [](){return t-tt
                             ^
input_line_79:2:28: error: use of undeclared identifier 't'
auto lambda0 = [](){return t-tt
                           ^
input_line_79:2:30: error: use of undeclared identifier 'tt'
auto lambda0 = [](){return t-tt
                             ^
Traceback (most recent call last):
  File "/home/LHCB-T3/dmanuzzi/LAPPD/2023julySPS/out/run65_100GeV_0_1_-1.0_sqrt__baseline_baseline/../../src/get_resT.py", line 38, in <module>
    rdf = rdf.Define('dt_rf', 't-tt')
cppyy.gbl.std.runtime_error: Template method resolution failed:
  ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void> ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void>::Define(basic_string_view<char,char_traits<char> > name, basic_string_view<char,char_traits<char> > expression) =>
    runtime_error: 
RDataFrame: An error occurred during just-in-time compilation. The lines above might indicate the cause of the crash
 All RDF objects that have not run an event loop yet should be considered in an invalid state.

  ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void> ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void>::Define(basic_string_view<char,char_traits<char> > name, basic_string_view<char,char_traits<char> > expression) =>
    runtime_error: 
RDataFrame: An error occurred during just-in-time compilation. The lines above might indicate the cause of the crash
 All RDF objects that have not run an event loop yet should be considered in an invalid state.

Error in <TTree::ReadFile>: Cannot open file: output_data_run65_100GeV_0_1_-1.0_sqrt__baseline_baseline.dat
input_line_73:2:28: error: use of undeclared identifier 'max0'
auto lambda0 = [](){return max0+max1+max2+max3
                           ^
input_line_73:2:33: error: use of undeclared identifier 'max1'
auto lambda0 = [](){return max0+max1+max2+max3
                                ^
input_line_73:2:38: error: use of undeclared identifier 'max2'
auto lambda0 = [](){return max0+max1+max2+max3
                                     ^
input_line_73:2:43: error: use of undeclared identifier 'max3'
auto lambda0 = [](){return max0+max1+max2+max3
                                          ^
input_line_77:2:28: error: use of undeclared identifier 'max0'
auto lambda0 = [](){return max0+max1+max2+max3
                           ^
input_line_77:2:33: error: use of undeclared identifier 'max1'
auto lambda0 = [](){return max0+max1+max2+max3
                                ^
input_line_77:2:38: error: use of undeclared identifier 'max2'
auto lambda0 = [](){return max0+max1+max2+max3
                                     ^
input_line_77:2:43: error: use of undeclared identifier 'max3'
auto lambda0 = [](){return max0+max1+max2+max3
                                          ^
Traceback (most recent call last):
  File "/home/LHCB-T3/dmanuzzi/LAPPD/2023julySPS/out/run65_100GeV_0_1_-1.0_sqrt__baseline_baseline/../../src/getEff_v2.py", line 35, in <module>
    rdf = rdf.Define('smax', 'max0+max1+max2+max3')
cppyy.gbl.std.runtime_error: Template method resolution failed:
  ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void> ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void>::Define(basic_string_view<char,char_traits<char> > name, basic_string_view<char,char_traits<char> > expression) =>
    runtime_error: 
RDataFrame: An error occurred during just-in-time compilation. The lines above might indicate the cause of the crash
 All RDF objects that have not run an event loop yet should be considered in an invalid state.

  ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void> ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void>::Define(basic_string_view<char,char_traits<char> > name, basic_string_view<char,char_traits<char> > expression) =>
    runtime_error: 
RDataFrame: An error occurred during just-in-time compilation. The lines above might indicate the cause of the crash
 All RDF objects that have not run an event loop yet should be considered in an invalid state.

